testsuite/tests/typecheck/should_fail/tcfail122.stderr

tcfail122.hs:9:9: error: [GHC-18872]
    • Couldn't match kind ‘* -> *’ with ‘*’
      When matching types
        d0 :: * -> *
        b :: *
      Expected: a b
        Actual: c0 d0
    • In the expression:
          undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d
      In the expression:
        [undefined :: forall a b. a b,
         undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d]
      In an equation for ‘foo’:
          foo
            = [undefined :: forall a b. a b,
               undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d]
    • Relevant bindings include
        foo :: [a b] (bound at tcfail122.hs:8:1)
